--- a/src/appmenu.ui
+++ b/src/appmenu.ui
@@ -23,6 +23,11 @@
         <attribute name="label" translatable="yes">_About</attribute>
         <attribute name="action">app.about</attribute>
       </item>
+      <item>
+	<attribute name="action">app.quit</attribute>
+	<attribute name="label" translatable="yes">_Quit</attribute>
+	<attribute name="accel">&lt;Primary&gt;q</attribute>
+      </item>
     </section>
   </menu>
 </interface>
