--- a/src/main-window.ui
+++ b/src/main-window.ui
@@ -54,7 +54,7 @@
                 <property name="label" translatable="yes">Floorplan</property>
               </object>
               <packing>
-                <property name="tab_fill">False</property>
+                <property name="tab_fill">True</property>
               </packing>
             </child>
             <child>
@@ -74,7 +74,7 @@
               </object>
               <packing>
                 <property name="position">1</property>
-                <property name="tab_fill">False</property>
+                <property name="tab_fill">True</property>
               </packing>
             </child>
             <child>
@@ -85,7 +85,7 @@
             </child>
           </object>
           <packing>
-            <property name="expand">False</property>
+            <property name="expand">True</property>
             <property name="fill">True</property>
             <property name="position">0</property>
           </packing>
