--- a/src/main-window.ui
+++ b/src/main-window.ui
@@ -10,20 +10,21 @@
       <object class="GtkToolbar" id="toolbar">
         <property name="visible">True</property>
         <property name="can_focus">False</property>
-	<child>
-	  <object class="GtkToolButton" id="save-button">
-	    <property name="visible">True</property>
-	    <property name="can_focus">False</property>
-	    <property name="use_action_appearance">False</property>
-	    <property name="is_important">True</property>
-	    <property name="use_underline">True</property>
-	    <property name="stock_id">gtk-save</property>
-	  </object>
-	  <packing>
-	    <property name="expand">False</property>
-	    <property name="homogeneous">True</property>
-	  </packing>
-	</child>
+        <child>
+          <object class="GtkToolButton" id="save-button">
+            <property name="use_action_appearance">False</property>
+            <property name="visible">True</property>
+            <property name="can_focus">False</property>
+            <property name="use_action_appearance">False</property>
+            <property name="is_important">True</property>
+            <property name="use_underline">True</property>
+            <property name="stock_id">gtk-save</property>
+          </object>
+          <packing>
+            <property name="expand">False</property>
+            <property name="homogeneous">True</property>
+          </packing>
+        </child>
       </object>
       <packing>
         <property name="expand">False</property>
@@ -41,64 +42,153 @@
             <property name="can_focus">True</property>
             <child>
               <object class="GtkBox" id="floor-plan-box">
-		<property name="visible">True</property>
-		<property name="can_focus">True</property>
-		<property name="orientation">vertical</property>
-	      </object>
+                <property name="visible">True</property>
+                <property name="can_focus">True</property>
+                <property name="orientation">vertical</property>
+              </object>
             </child>
             <child type="tab">
-              <object class="GtkLabel" id="floorplan">
+              <object class="GtkLabel" id="floorplan-label">
                 <property name="visible">True</property>
                 <property name="can_focus">False</property>
-                <property name="xalign">0.4699999988079071</property>
                 <property name="label" translatable="yes">Floorplan</property>
               </object>
-              <packing>
-                <property name="tab_fill">True</property>
-              </packing>
             </child>
-            <child>
-	      <object class="GtkBox" id="relations-box">
+
+	    <child>
+	      <object class="GtkBox" id="guests-hbox">
 		<property name="visible">True</property>
-		<property name="can_focus">True</property>
-		<property name="orientation">vertical</property>
+		<property name="can_focus">False</property>
+		<property name="orientation">horizontal</property>
+
+		<child>
+		  <object class="GtkBox" id="guestlist-box">
+		    <property name="visible">True</property>
+		    <property name="can_focus">False</property>
+		    <property name="orientation">vertical</property>
+		    <child>
+		      <object class="GtkScrolledWindow" id="guests-tree-scrolledwindow">
+			<property name="visible">True</property>
+			<property name="can_focus">True</property>
+			<property name="hscrollbar_policy">never</property>
+			<property name="shadow_type">in</property>
+			<child>
+			  <object class="GtkTreeView" id="treeview1">
+			    <property name="visible">True</property>
+			    <property name="can_focus">True</property>
+			    <property name="width_request">200</property>
+			    <child internal-child="selection">
+			      <object class="GtkTreeSelection" id="treeview-selection1"/>
+			    </child>
+			  </object>
+			</child>
+		      </object>
+		      <packing>
+			<property name="expand">True</property>
+			<property name="fill">True</property>
+		      </packing>
+		    </child>
+		    
+		    <child>
+		      <object class="GtkToolbar" id="guest_toolbar">
+			<property name="visible">True</property>
+			<property name="can_focus">False</property>
+			<property name="toolbar_style">icons</property>
+			<property name="show_arrow">False</property>
+			<property name="icon_size">1</property>
+			<style>
+			  <class name="inline-toolbar"/>
+			</style>
+			<child>
+			  <object class="GtkToolButton" id="guest_add">
+			    <property name="use_action_appearance">False</property>
+			    <property name="visible">True</property>
+			    <property name="label" translatable="yes">Add Guest</property>
+			    <property name="can_focus">False</property>
+			    <property name="use_underline">True</property>
+			    <property name="icon_name">list-add-symbolic</property>
+			  </object>
+			  <packing>
+			    <property name="expand">False</property>
+			    <property name="homogeneous">True</property>
+			  </packing>
+			</child>
+		    
+			<child>
+			  <object class="GtkToolButton" id="guest_remove">
+			    <property name="use_action_appearance">False</property>
+			    <property name="visible">True</property>
+			    <property name="label" translatable="yes">Remove Guest</property>
+			    <property name="sensitive">False</property>
+			    <property name="can_focus">False</property>
+			    <property name="use_underline">True</property>
+			    <property name="icon_name">list-remove-symbolic</property>
+			  </object>
+			  <packing>
+			    <property name="expand">False</property>
+			    <property name="homogeneous">True</property>
+			  </packing>
+			</child>
+			
+		      </object>
+		      <packing>
+			<property name="expand">False</property>
+			<property name="fill">False</property>
+		      </packing>
+		    </child>
+		  </object>
+		</child>
+		<child>
+		  <object class="GtkBox" id="guest-edit-box">
+		    
+		  </object>
+		  <packing>
+		    <property name="expand">True</property>
+		    <property name="fill">True</property>
+		  </packing>
+		</child>
 	      </object>
+	    </child>
+	      
+	    <child type="tab">
+	      <object class="GtkLabel" id="guests-label">
+		<property name="visible">True</property>
+		<property name="can_focus">False</property>
+		<property name="label" translatable="yes">Guests</property>
+	      </object>
+	      <packing>
+		<property name="tab_fill">False</property>
+	      </packing>
+	    </child>
+	
+            <child>
+              <object class="GtkBox" id="relations-box">
+                <property name="visible">True</property>
+                <property name="can_focus">True</property>
+                <property name="orientation">vertical</property>
+              </object>
             </child>
             <child type="tab">
-              <object class="GtkLabel" id="relations">
+              <object class="GtkLabel" id="relations-label">
                 <property name="visible">True</property>
                 <property name="can_focus">False</property>
-                <property name="xalign">0.4699999988079071</property>
-                <property name="yalign">0.47999998927116394</property>
                 <property name="label" translatable="yes">Relations</property>
               </object>
               <packing>
-                <property name="position">1</property>
-                <property name="tab_fill">True</property>
+                <property name="tab_fill">False</property>
               </packing>
             </child>
-            <child>
-              <placeholder/>
-            </child>
-            <child type="tab">
-              <placeholder/>
-            </child>
-          </object>
-          <packing>
-            <property name="expand">True</property>
-            <property name="fill">True</property>
-            <property name="position">0</property>
-          </packing>
-        </child>
-        <child>
-          <placeholder/>
-        </child>
+
+
+	  </object>
+	  <packing>
+	    <property name="expand">True</property>
+	    <property name="fill">True</property>
+	    <property name="position">0</property>
+	  </packing>
+	</child>
+	    
       </object>
-      <packing>
-        <property name="expand">True</property>
-        <property name="fill">True</property>
-        <property name="position">1</property>
-      </packing>
     </child>
   </object>
 </interface>
