Set the menubar style on the main toolbar, this allows moving and unmaximizing the window using the toolbar.

--- a/src/main-window.ui
+++ b/src/main-window.ui
@@ -10,6 +10,9 @@
       <object class="GtkToolbar" id="toolbar">
         <property name="visible">True</property>
         <property name="can_focus">False</property>
+	<style>
+	  <class name="menubar"/>
+	</style>
         <child>
           <object class="GtkToolButton" id="save-button">
             <property name="use_action_appearance">False</property>
