--- a/src/main-window.ui
+++ b/src/main-window.ui
@@ -79,7 +79,7 @@
 			<property name="hscrollbar_policy">never</property>
 			<property name="shadow_type">in</property>
 			<child>
-			  <object class="GtkTreeView" id="treeview1">
+			  <object class="GtkTreeView" id="guestlist-view">
 			    <property name="visible">True</property>
 			    <property name="can_focus">True</property>
 			    <property name="width_request">200</property>
