--- a/src/main-window.ui
+++ b/src/main-window.ui
@@ -2,39 +2,28 @@
 <!-- Generated with glade 3.18.3 -->
 <interface>
   <requires lib="gtk+" version="3.0"/>
+  <object class="GtkHeaderBar" id="headerbar">
+        <property name="visible">True</property>
+        <property name="can_focus">False</property>
+	<property name="show_close_button">True</property>
+        <child>
+          <object class="GtkButton" id="save-button">
+            <property name="use_action_appearance">False</property>
+            <property name="visible">True</property>
+            <property name="can_focus">False</property>
+            <property name="use_underline">True</property>
+	    <property name="label" translatable="yes">Save</property>
+          </object>
+        </child>
+        <style>
+          <class name="titlebar"/>
+        </style>
+  </object>
   <object class="GtkListStore" id="liststore1"/>
   <object class="GtkBox" id="main-box">
     <property name="visible">True</property>
     <property name="can_focus">False</property>
     <property name="orientation">vertical</property>
-    <child>
-      <object class="GtkToolbar" id="toolbar">
-        <property name="visible">True</property>
-        <property name="can_focus">False</property>
-        <child>
-          <object class="GtkToolButton" id="save-button">
-            <property name="use_action_appearance">False</property>
-            <property name="visible">True</property>
-            <property name="can_focus">False</property>
-            <property name="is_important">True</property>
-            <property name="use_underline">True</property>
-            <property name="stock_id">gtk-save</property>
-          </object>
-          <packing>
-            <property name="expand">False</property>
-            <property name="homogeneous">True</property>
-          </packing>
-        </child>
-        <style>
-          <class name="menubar"/>
-        </style>
-      </object>
-      <packing>
-        <property name="expand">False</property>
-        <property name="fill">True</property>
-        <property name="position">0</property>
-      </packing>
-    </child>
     <child>
       <object class="GtkBox" id="content-box">
         <property name="visible">True</property>
