--- a/src/main-window.ui
+++ b/src/main-window.ui
@@ -2,12 +2,15 @@
 <!-- Generated with glade 3.18.3 -->
 <interface>
   <requires lib="gtk+" version="3.10"/>
-  <object class="GtkHeaderBar" id="headerbar">
+  <template class="TablerMainWindow" parent="GtkApplicationWindow">
+    <property name="title">Tabler</property>
+    <child type="titlebar">
+      <object class="GtkHeaderBar" id="headerbar">
         <property name="visible">True</property>
         <property name="can_focus">False</property>
 	<property name="show_close_button">True</property>
         <child>
-          <object class="GtkButton" id="save-button">
+          <object class="GtkButton" id="save_button">
             <property name="use_action_appearance">False</property>
             <property name="visible">True</property>
             <property name="can_focus">False</property>
@@ -18,194 +21,200 @@
         <style>
           <class name="titlebar"/>
         </style>
-  </object>
-  <object class="GtkListStore" id="liststore1"/>
-  <object class="GtkBox" id="main-box">
-    <property name="visible">True</property>
-    <property name="can_focus">False</property>
-    <property name="orientation">vertical</property>
+      </object>
+    </child>
     <child>
-      <object class="GtkBox" id="content-box">
+      <object class="GtkListStore" id="liststore1"/>
+    </child>
+    <child>
+      <object class="GtkBox" id="main_box">
         <property name="visible">True</property>
         <property name="can_focus">False</property>
-        <property name="hexpand">True</property>
-        <property name="vexpand">True</property>
+        <property name="orientation">vertical</property>
         <child>
-          <object class="GtkNotebook" id="notebook1">
+          <object class="GtkBox" id="content_box">
             <property name="visible">True</property>
-            <property name="can_focus">True</property>
+            <property name="can_focus">False</property>
+            <property name="hexpand">True</property>
+            <property name="vexpand">True</property>
             <child>
-              <object class="GtkBox" id="floor-plan-box">
+              <object class="GtkNotebook" id="notebook1">
                 <property name="visible">True</property>
                 <property name="can_focus">True</property>
-                <property name="hexpand">True</property>
-                <property name="vexpand">True</property>
-                <property name="orientation">vertical</property>
-              </object>
-            </child>
-            <child type="tab">
-              <object class="GtkLabel" id="floorplan-label">
-                <property name="visible">True</property>
-                <property name="can_focus">False</property>
-                <property name="label" translatable="yes">Floorplan</property>
-              </object>
-              <packing>
-                <property name="tab_fill">False</property>
-              </packing>
-            </child>
-            <child>
-              <object class="GtkBox" id="guests-hbox">
-                <property name="visible">True</property>
-                <property name="can_focus">False</property>
-                <property name="hexpand">True</property>
-                <property name="vexpand">True</property>
-                <property name="border_width">12</property>
-                <property name="spacing">12</property>
                 <child>
-                  <object class="GtkBox" id="guestlist-box">
+                  <object class="GtkBox" id="floor_plan_box">
+                    <property name="visible">True</property>
+                    <property name="can_focus">True</property>
+                    <property name="hexpand">True</property>
+                    <property name="vexpand">True</property>
+                    <property name="orientation">vertical</property>
+		  </object>
+		</child>
+		<child type="tab">
+		  <object class="GtkLabel" id="floorplan_label">
                     <property name="visible">True</property>
                     <property name="can_focus">False</property>
-                    <property name="orientation">vertical</property>
-                    <child>
-                      <object class="GtkScrolledWindow" id="guests-tree-scrolledwindow">
-                        <property name="visible">True</property>
-                        <property name="can_focus">True</property>
-                        <property name="hscrollbar_policy">never</property>
-                        <property name="shadow_type">in</property>
-                        <child>
-                          <object class="GtkTreeView" id="guestlist-view">
-                            <property name="width_request">200</property>
-                            <property name="visible">True</property>
-                            <property name="can_focus">True</property>
-                            <child internal-child="selection">
-                              <object class="GtkTreeSelection" id="treeview-selection1"/>
-                            </child>
-                          </object>
-                        </child>
-                      </object>
-                      <packing>
-                        <property name="expand">True</property>
-                        <property name="fill">True</property>
-                        <property name="position">0</property>
-                      </packing>
-                    </child>
-                    <child>
-                      <object class="GtkToolbar" id="guest_toolbar">
-                        <property name="visible">True</property>
-                        <property name="can_focus">False</property>
-                        <property name="toolbar_style">icons</property>
-                        <property name="show_arrow">False</property>
-                        <property name="icon_size">1</property>
-                        <child>
-                          <object class="GtkToolButton" id="guest-add">
-                            <property name="use_action_appearance">False</property>
-                            <property name="visible">True</property>
-                            <property name="can_focus">False</property>
-                            <property name="label" translatable="yes">Add Guest</property>
-                            <property name="use_underline">True</property>
-                            <property name="icon_name">list-add-symbolic</property>
-                          </object>
-                          <packing>
-                            <property name="expand">False</property>
-                            <property name="homogeneous">True</property>
-                          </packing>
-                        </child>
-                        <child>
-                          <object class="GtkToolButton" id="guest-remove">
-                            <property name="use_action_appearance">False</property>
-                            <property name="visible">True</property>
-                            <property name="sensitive">False</property>
-                            <property name="can_focus">False</property>
-                            <property name="label" translatable="yes">Remove Guest</property>
-                            <property name="use_underline">True</property>
-                            <property name="icon_name">list-remove-symbolic</property>
-                          </object>
-                          <packing>
-                            <property name="expand">False</property>
-                            <property name="homogeneous">True</property>
-                          </packing>
-                        </child>
-                        <style>
-                          <class name="inline-toolbar"/>
-                        </style>
-                      </object>
-                      <packing>
-                        <property name="expand">False</property>
-                        <property name="fill">False</property>
-                        <property name="position">1</property>
-                      </packing>
-                    </child>
-                  </object>
-                  <packing>
-                    <property name="expand">False</property>
-                    <property name="fill">True</property>
-                    <property name="position">0</property>
-                  </packing>
-                </child>
-                <child>
-                  <object class="GtkBox" id="guest-edit-box">
+                    <property name="label" translatable="yes">Floorplan</property>
+		  </object>
+		  <packing>
+                    <property name="tab_fill">False</property>
+		  </packing>
+		</child>
+		<child>
+		  <object class="GtkBox" id="guests_hbox">
+                    <property name="visible">True</property>
                     <property name="can_focus">False</property>
                     <property name="hexpand">True</property>
                     <property name="vexpand">True</property>
-                  </object>
-                  <packing>
-                    <property name="expand">True</property>
-                    <property name="fill">True</property>
+                    <property name="border_width">12</property>
+                    <property name="spacing">12</property>
+                    <child>
+                      <object class="GtkBox" id="guestlist_box">
+			<property name="visible">True</property>
+			<property name="can_focus">False</property>
+			<property name="orientation">vertical</property>
+			<child>
+			  <object class="GtkScrolledWindow" id="guests_tree_scrolledwindow">
+                            <property name="visible">True</property>
+                            <property name="can_focus">True</property>
+                            <property name="hscrollbar_policy">never</property>
+                            <property name="shadow_type">in</property>
+                            <child>
+                              <object class="GtkTreeView" id="guestlist_view">
+				<property name="width_request">200</property>
+				<property name="visible">True</property>
+				<property name="can_focus">True</property>
+				<child internal-child="selection">
+				  <object class="GtkTreeSelection" id="treeview-selection1"/>
+				</child>
+                              </object>
+                            </child>
+			  </object>
+			  <packing>
+                            <property name="expand">True</property>
+                            <property name="fill">True</property>
+                            <property name="position">0</property>
+			  </packing>
+			</child>
+			<child>
+			  <object class="GtkToolbar" id="guest_toolbar">
+                            <property name="visible">True</property>
+                            <property name="can_focus">False</property>
+                            <property name="toolbar_style">icons</property>
+                            <property name="show_arrow">False</property>
+                            <property name="icon_size">1</property>
+                            <child>
+                              <object class="GtkToolButton" id="guest_add">
+				<property name="use_action_appearance">False</property>
+				<property name="visible">True</property>
+				<property name="can_focus">False</property>
+				<property name="label" translatable="yes">Add Guest</property>
+				<property name="use_underline">True</property>
+				<property name="icon_name">list-add-symbolic</property>
+                              </object>
+                              <packing>
+				<property name="expand">False</property>
+				<property name="homogeneous">True</property>
+                              </packing>
+                            </child>
+                            <child>
+                              <object class="GtkToolButton" id="guest_remove">
+				<property name="use_action_appearance">False</property>
+				<property name="visible">True</property>
+				<property name="sensitive">False</property>
+				<property name="can_focus">False</property>
+				<property name="label" translatable="yes">Remove Guest</property>
+				<property name="use_underline">True</property>
+				<property name="icon_name">list-remove-symbolic</property>
+                              </object>
+                              <packing>
+				<property name="expand">False</property>
+				<property name="homogeneous">True</property>
+                              </packing>
+                            </child>
+                            <style>
+                              <class name="inline-toolbar"/>
+                            </style>
+			  </object>
+			  <packing>
+                            <property name="expand">False</property>
+                            <property name="fill">False</property>
+                            <property name="position">1</property>
+			  </packing>
+			</child>
+                      </object>
+                      <packing>
+			<property name="expand">False</property>
+			<property name="fill">True</property>
+			<property name="position">0</property>
+                      </packing>
+                    </child>
+                    <child>
+                      <object class="GtkBox" id="guest_edit_box">
+			<property name="can_focus">False</property>
+			<property name="hexpand">True</property>
+			<property name="vexpand">True</property>
+                      </object>
+                      <packing>
+			<property name="expand">True</property>
+			<property name="fill">True</property>
+			<property name="position">1</property>
+                      </packing>
+                    </child>
+		  </object>
+		  <packing>
                     <property name="position">1</property>
-                  </packing>
-                </child>
+		  </packing>
+		</child>
+		<child type="tab">
+		  <object class="GtkLabel" id="guests_label">
+                    <property name="visible">True</property>
+                    <property name="can_focus">False</property>
+                    <property name="label" translatable="yes">Guests</property>
+		  </object>
+		  <packing>
+                    <property name="position">1</property>
+                    <property name="tab_fill">False</property>
+		  </packing>
+		</child>
+		<child>
+		  <object class="GtkBox" id="relations_box">
+                    <property name="visible">True</property>
+                    <property name="can_focus">True</property>
+                    <property name="hexpand">True</property>
+                    <property name="vexpand">True</property>
+                    <property name="orientation">vertical</property>
+		  </object>
+		  <packing>
+                    <property name="position">2</property>
+		  </packing>
+		</child>
+		<child type="tab">
+		  <object class="GtkLabel" id="relations_label">
+                    <property name="visible">True</property>
+                    <property name="can_focus">False</property>
+                    <property name="label" translatable="yes">Relations</property>
+		  </object>
+		  <packing>
+                    <property name="position">2</property>
+                    <property name="tab_fill">False</property>
+		  </packing>
+		</child>
               </object>
               <packing>
-                <property name="position">1</property>
+		<property name="expand">True</property>
+		<property name="fill">True</property>
+		<property name="position">0</property>
               </packing>
             </child>
-            <child type="tab">
-              <object class="GtkLabel" id="guests-label">
-                <property name="visible">True</property>
-                <property name="can_focus">False</property>
-                <property name="label" translatable="yes">Guests</property>
-              </object>
-              <packing>
-                <property name="position">1</property>
-                <property name="tab_fill">False</property>
-              </packing>
-            </child>
-            <child>
-              <object class="GtkBox" id="relations-box">
-                <property name="visible">True</property>
-                <property name="can_focus">True</property>
-                <property name="hexpand">True</property>
-                <property name="vexpand">True</property>
-                <property name="orientation">vertical</property>
-              </object>
-              <packing>
-                <property name="position">2</property>
-              </packing>
-            </child>
-            <child type="tab">
-              <object class="GtkLabel" id="relations-label">
-                <property name="visible">True</property>
-                <property name="can_focus">False</property>
-                <property name="label" translatable="yes">Relations</property>
-              </object>
-              <packing>
-                <property name="position">2</property>
-                <property name="tab_fill">False</property>
-              </packing>
-            </child>
-          </object>
-          <packing>
+	  </object>
+	  <packing>
             <property name="expand">True</property>
             <property name="fill">True</property>
-            <property name="position">0</property>
-          </packing>
-        </child>
+            <property name="position">1</property>
+	  </packing>
+	</child>
       </object>
-      <packing>
-        <property name="expand">True</property>
-        <property name="fill">True</property>
-        <property name="position">1</property>
-      </packing>
     </child>
-  </object>
+  </template>
 </interface>
