--- a/src/main-window.ui
+++ b/src/main-window.ui
@@ -4,8 +4,12 @@
   <requires lib="gtk+" version="3.10"/>
   <template class="TablerMainWindow" parent="GtkApplicationWindow">
     <property name="title">Tabler</property>
+    <property name="default-width">800</property>
+    <property name="default-height">600</property>
     <child type="titlebar">
       <object class="GtkHeaderBar" id="headerbar">
+	<property name="title">Tabler</property>
+	<property name="subtitle">Unnamed</property>
         <property name="visible">True</property>
         <property name="can_focus">False</property>
 	<property name="show_close_button">True</property>
