--- a/src/main-window.ui
+++ b/src/main-window.ui
@@ -165,6 +165,7 @@
 			<property name="visible">True</property>
     			<property name="can_focus">False</property>
     			<property name="valign">start</property>
+			<property name="halign">start</property>
     			<property name="margin_start">12</property>
     			<property name="margin_end">12</property>
     			<property name="margin_top">12</property>
@@ -176,7 +177,7 @@
 	
 			<child>
 			  <object class="GtkLabel" id="guest_name_label">
-			    <property name="visible">true</property>
+			    <property name="visible">True</property>
 		            <property name="label" translatable="yes">Name:</property>
 			  </object>
 			  <packing>
@@ -188,8 +189,8 @@
 			</child>
 			<child>
 			  <object class="GtkEntry" id="guest_name_entry">
-			    <property name="visible">true</property>
-				<signal name="changed" handler="on_guest_name_changed"
+			    <property name="visible">True</property>
+			    <signal name="changed" handler="on_guest_name_changed"
 					object="TablerMainWindow" swapped="no"/>
 			  </object>
 			  <packing>
@@ -201,9 +202,8 @@
 			</child>
 			<child>
 			  <object class="GtkLabel" id="guest_gender_label">
-			    <property name="visible">true</property>
-			    <property name="label" translatable="yes">Gender:
-			    </property>
+			    <property name="visible">True</property>
+			    <property name="label" translatable="yes">Gender:</property>
 			  </object>
 			  <packing>
         		    <property name="left_attach">0</property>
@@ -214,7 +214,7 @@
 			</child>
 			<child>
 		       	  <object class="GtkComboBoxText" id="guest_gender_combobox">
-			    <property name="visible">true</property>
+			    <property name="visible">True</property>
 			    <items>
 			      <item translatable="yes">Unknown</item>
 			      <item translatable="yes">Male</item>
