--- a/src/main-window.ui
+++ b/src/main-window.ui
@@ -9,11 +9,13 @@
     <property name="window-position">center</property>
     <child type="titlebar">
       <object class="GtkHeaderBar" id="headerbar">
-	<property name="title">Tabler</property>
-	<property name="subtitle">Unnamed</property>
+	<!--<property name="title">Tabler</property>
+	<property name="subtitle">Unnamed</property>-->
         <property name="visible">True</property>
-        <property name="can_focus">False</property>
+        <property name="can_focus">True</property>
 	<property name="show_close_button">True</property>
+	<property name="hexpand">True</property>
+        <property name="vexpand">False</property>
         <child>
           <object class="GtkButton" id="save_button">
             <property name="use_action_appearance">False</property>
@@ -24,7 +26,13 @@
 	    <signal name="clicked" handler="on_save_clicked" 			    object="TablerMainWindow" swapped="no"/>
           </object>
         </child>
-        <style>
+	<child type="title">
+	  <object class="GtkStackSwitcher" id="switcher">
+		<property name="stack">stack</property>
+		<property name="visible">True</property>
+	      </object>
+	    </child> 	        
+	<style>
           <class name="titlebar"/>
         </style>
       </object>
@@ -34,8 +42,18 @@
         <property name="visible">True</property>
         <property name="can_focus">False</property>
         <property name="orientation">vertical</property>
+	<property name="hexpand">True</property>
+        <property name="vexpand">False</property>
+<!--
+	<child>
+	  <object class="GtkStackSwitcher" id="switcher">
+		<property name="stack">stack</property>
+		<property name="visible">True</property>
+	      </object>
+	    </child>
+-->   
         <child>
-              <object class="GtkNotebook" id="notebook1">
+              <object class="GtkStack" id="stack">
                 <property name="visible">True</property>
                 <property name="can_focus">True</property>
                 <child>
@@ -44,21 +62,13 @@
                     <property name="can_focus">True</property>
                     <property name="hexpand">True</property>
                     <property name="vexpand">True</property>
-                    <property name="orientation">vertical</property>
 		  </object>
-		</child>
-		<child type="tab">
-		  <object class="GtkLabel" id="floorplan_label">
-                    <property name="visible">True</property>
-                    <property name="can_focus">False</property>
-                    <property name="label" translatable="yes">Floorplan</property>
-		  </object>
-		  <packing>
-                    <property name="tab_fill">False</property>
+ 		  <packing>
+		    <property name="title" translatable="yes">Floorplan</property>
 		  </packing>
 		</child>
 		<child>
-		  <object class="GtkBox" id="guests_hbox">
+		  <object class="GtkBox" id="guests_box">
                     <property name="visible">True</property>
                     <property name="can_focus">False</property>
                     <property name="hexpand">True</property>
@@ -275,18 +285,7 @@
                     </child>
 		  </object>
 		  <packing>
-                    <property name="position">1</property>
-		  </packing>
-		</child>
-		<child type="tab">
-		  <object class="GtkLabel" id="guests_label">
-                    <property name="visible">True</property>
-                    <property name="can_focus">False</property>
-                    <property name="label" translatable="yes">Guests</property>
-		  </object>
-		  <packing>
-                    <property name="position">1</property>
-                    <property name="tab_fill">False</property>
+		    <property name="title" translatable="yes">Guests</property>
 		  </packing>
 		</child>
 		<child>
@@ -298,18 +297,7 @@
                     <property name="orientation">vertical</property>
 		  </object>
 		  <packing>
-                    <property name="position">2</property>
-		  </packing>
-		</child>
-		<child type="tab">
-		  <object class="GtkLabel" id="relations_label">
-                    <property name="visible">True</property>
-                    <property name="can_focus">False</property>
-                    <property name="label" translatable="yes">Relations</property>
-		  </object>
-		  <packing>
-                    <property name="position">2</property>
-                    <property name="tab_fill">False</property>
+		    <property name="title" translatable="yes">Relations</property>
 		  </packing>
 		</child>
               </object>
