Implement some stubs for the relations editor.

--- a/src/main-window.ui
+++ b/src/main-window.ui
@@ -295,6 +295,11 @@
                     <property name="hexpand">True</property>
                     <property name="vexpand">True</property>
                     <property name="orientation">vertical</property>
+		    <child>
+		      <object class="TablerRelationsEditor" id="relations_editor">
+			<property name="visible">True</property>
+		      </object>
+		    </child>
 		  </object>
 		  <packing>
 		    <property name="title" translatable="yes">Relations</property>
